<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Mappe 2</string>
    <string name="app_name">S198520_mappe</string>
    <string name="btn_new">Ny Kontakt</string>
    <string name="btn_change">Endre Kontakt</string>
    <string name="delete">Slett Kontakt</string>
    <string name="show">Se Kontakter</string>
    <string name="btn_submit">"Lagre"</string>
    <string name="name">"Navn"</string>
    <string name="tlf">"Telefon"</string>
    <string name="birhtday">"Fodselsdag"</string>
    <string name="textedit">Skriv inn navn</string>
    <string name="btn_editnametext">Endre</string>
    <string name="btn_deletenametext">"Slett"</string>
</resources>