<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/sky">


    <TextView
            android:id="@+id/newcontact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name" />
    <EditText
            android:id="@+id/newcontactfield"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/newcontact"
            android:background="@color/white"
            android:layout_marginBottom="25dp"/>
    <TextView
        android:id="@+id/newtlf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tlf"
        android:layout_below="@id/newcontactfield"
        />
    <EditText
        android:id="@+id/newtlffield"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/newtlf"
        android:background="@color/white"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="phone"/>
    <TextView
        android:id="@+id/newbirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/birhtday"
        android:layout_below="@id/newtlffield"/>
    <EditText
        android:id="@+id/newbirthfield"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/newbirth"
        android:background="@color/white"
        android:layout_marginBottom="125dp"
        android:ems="10"
        android:inputType="date"/>
    <Button
        android:id="@+id/bt_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newbirthfield"
        android:layout_alignParentBottom="true"
        android:background="@color/grey"
        android:text="@string/btn_submit" />
</RelativeLayout>
