<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/sky"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="@string/btn_new"/>

    <Button
        android:id="@+id/btn_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="@string/btn_new"
        />
    <!--Hello world -->
    <Button
        android:id="@+id/btn_change"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/button2"
        android:layout_below="@+id/btn_new"
        android:layout_alignParentStart="true"
        android:text="@string/btn_change"/>
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="@string/delete"
        android:layout_below="@+id/btn_change"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/btn_se"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="@string/se"
        android:layout_below="@+id/btn_delete"
        android:layout_alignParentStart="true" />

</RelativeLayout>